# StockPulse

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
infra/database/: init.template.sql
infra/grafana/: datasource.template.yml
infra/nginx/: default.conf.template
src/: app.py  main.py  selenium_script.py
src/api/v1/: __init__.py  dependencies.py  internal.py  otp.py
src/core/: broker.py  config.py  logger.py  middleware.py  storage.py
src/service/: code_service.py
