[tool.poetry]
name = "stockpulse"
version = "0.1.0"
description = ""
authors = ["Mark Chalenko <m.chalenko@alkor-tech.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
